# Secure-Face-Liveness-Suite

./: .gitignore  ARCHITECTURE.md  COMPETITOR_RANKING.md  DATALAKE_INTEGRATION.md  Detailed Documentation.md  LICENSE  READINESS_AUDIT.md  README.md  SECURITY.md  TEAMMATE_HANDOFF.md  benchmark.md  benchmark_onnx.py  benchmark_results.json  benchmark_results_onnx.json  build_rust.sh  crash_logs.txt  crash_logs_utf8.txt  download_kyc_dataset.py  evaluate_real_images.py  export_onnx.py  implementation_plan.md  pipeline.py  requirements.txt  run_benchmarks.py  upload_to_hf.py
.github/workflows/: android-build.yml  aws-build.yml  ios-build.yml  rust-cross-compile.yml
_legacy_cpp/: quantize_tflite.py
_legacy_cpp/database/: CryptoEngine.cpp  CryptoEngine.h  OfflineLedgerManager.h
_legacy_cpp/jsi/: CMakeLists.txt  VisionCameraJSIPlugin.h  nhai_attendance.db
_legacy_cpp/preprocessing/: optical_flow.cpp  optical_flow.h
aegis-mobile/: App.tsx  README.md  app.json  jest.config.js  jest.setup.js  package.json  patch_elf.py
aegis-mobile/android/: build.gradle  gradle.properties  settings.gradle
aegis-mobile/android/app/: build.gradle
aegis-mobile/ios/: Podfile
aegis-mobile/ios/AegisApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
aegis-mobile/ios/AegisApp.xcodeproj/: project.pbxproj
aegis-mobile/ios/AegisAppTests/: AegisAppTests.m
aegis-mobile/src/components/: CameraErrorBoundary.tsx  CameraPreview.tsx  EngineErrorBoundary.tsx  ErrorBoundary.tsx  LivenessPromptUI.tsx  ScanReticle.tsx  TelemetryHUD.tsx
aegis-mobile/src/config/: sync.ts
aegis-mobile/src/hooks/: useFaceCamera.ts  useLivenessOrchestrator.ts  useOpenFace.ts  useOpenFaceEngine.ts
aegis-mobile/src/screens/: AuthenticationScreen.tsx  DashboardScreen.tsx  EnrollmentScreen.tsx  LandingScreen.tsx
aegis-mobile/src/services/: syncClient.ts
aegis-mobile/src/theme/: index.ts
aegis-mobile/src/types/: engine.ts
aws/: template.json
aws/lambda/: sync_handler.py
edge_vision_engine/checkpoints/onnx/: detector.onnx  ghostfacenet.onnx  liveness.onnx
edge_vision_engine/database/: OfflineLedgerManager.cpp  aws_sync_lambda.py
edge_vision_engine/jsi/: NHAIEdgeVisionEngine.podspec  TFLiteEngine.cpp  TFLiteEngine.h  VectorMath.h  VisionCameraJSIPlugin.cpp  test_jsi_harness.cpp
edge_vision_engine/models/: detector.py  download_hf_dataset.py  ghostfacenet.py  liveness.py  push_to_hub.py  train.py  train_blended.py
edge_vision_engine/preprocessing/: clahe_preprocessor.cpp  clahe_preprocessor.h  clahe_preprocessor.py
edge_vision_engine/quantization/: quantize_onnx.py
edge_vision_engine/simulator/: index.html  script.js  style.css
react-native-datalake-vision/: package-lock.json  package.json  react-native-datalake-vision.podspec  tsconfig.json
react-native-datalake-vision/android/: CMakeLists.txt  build.gradle  local.properties
react-native-datalake-vision/android/src/main/cpp/: FrameProcessorPlugin.cpp  datalake_vision_jni.cpp
react-native-datalake-vision/android/src/main/java/com/datalakevision/: DatalakeVisionFrameProcessorPlugin.java  DatalakeVisionModule.java  DatalakeVisionPackage.java
react-native-datalake-vision/example/: App.tsx  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
react-native-datalake-vision/example/android/: settings.gradle
react-native-datalake-vision/example/src/components/: CameraPreview.tsx  LivenessPromptUI.tsx  MatchResultOverlay.tsx  TelemetryHUD.tsx
react-native-datalake-vision/example/src/hooks/: useDatalakeVision.ts
react-native-datalake-vision/example/src/screens/: AuthenticationScreen.tsx
react-native-datalake-vision/ios/: DatalakeVision.h  DatalakeVision.mm  DatalakeVision.podspec  FrameProcessorPlugin.mm
react-native-datalake-vision/src/: DatalakeVision.ts  NativeDatalakeVision.ts  index.ts  types.ts
react-native-open-face/: LICENSE  README.md  package.json  react-native-open-face.podspec  tsconfig.build.json  tsconfig.json
react-native-open-face/aegis-app/: App.tsx  index.js  metro.config.js  package.json  tsconfig.json
react-native-open-face/aegis-app/android/: build.gradle  gradle.properties  settings.gradle
react-native-open-face/aegis-app/android/app/: build.gradle  proguard-rules.pro
react-native-open-face/aegis-app/src/components/: CameraPreview.tsx  ErrorBoundary.tsx  LivenessPromptUI.tsx  MatchResultOverlay.tsx  TelemetryHUD.tsx
react-native-open-face/aegis-app/src/hooks/: useOpenFace.ts
react-native-open-face/aegis-app/src/screens/: AuthenticationScreen.tsx  DashboardScreen.tsx  LandingScreen.tsx
react-native-open-face/android/: CMakeLists.txt  build.gradle  download_hf_models.py
react-native-open-face/android/src/main/cpp/: openface_jni.cpp
react-native-open-face/android/src/main/java/com/openface/: OpenFaceFrameProcessorPlugin.java  OpenFaceModule.java  OpenFacePackage.java
react-native-open-face/example/: App.tsx  package.json
react-native-open-face/example/android/: gradle.properties
react-native-open-face/example/android/app/: build.gradle
react-native-open-face/example/src/components/: CameraPreview.tsx
react-native-open-face/example/src/hooks/: useOpenFace.ts
react-native-open-face/example/src/screens/: AuthenticationScreen.tsx
react-native-open-face/ios/: FrameProcessorPlugin.mm  OpenFace.h  OpenFace.mm  OpenFace.podspec
react-native-open-face/src/: NativeOpenFace.ts  OpenFace.ts  index.ts  types.ts
rust_engine/: Cargo.toml
rust_engine/.cargo/: config.toml
rust_engine/src/: crypto.rs  hnsw_index.rs  inference.rs  ledger.rs  lib.rs  liveness.rs  memory_arena.rs  preprocessing.rs  sync.rs  thermal_governor.rs
web-tester/: README.md
web-tester/backend/: .dockerignore  Dockerfile  README.md  main.py  models.py  requirements.txt  schemas.py
web-tester/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web-tester/frontend/src/: App.tsx  index.css
web-tester/frontend/src/api/: inference.ts
web-tester/frontend/src/components/: CameraFeed.tsx  IdentityPanel.tsx  ModelCard.tsx  RegisterModal.tsx  ResultPanel.tsx  (+1 more)
(+10 files in other folders)
