[package]
name = "datalake_vision_engine"
version = "1.0.0"
edition = "2021"
description = "NHAI Offline Facial Recognition & Liveness Edge Engine"

[lib]
name = "datalake_vision_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Inference
tract-onnx = "0.21.7"
ndarray = "0.15.6"

# Cryptography
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.1.1"
rand_core = { version = "0.6.4", features = ["std"] }
hex = "0.4.3"

# Serialization & Storage
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = "1.3.3"
uuid = { version = "1.10.0", features = ["v4"] }

# Math / DSP
rustfft = "6.2.0"
rand = "0.8.5"
lazy_static = "1.5.0"
log = "0.4"

# Android NDK / JNI
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-sys = "0.6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
